SigmaCodebackup3rdSep/objects/Proposal__c.object
<CustomObject>
    <fields>
        <fullName>AVR_Commission_Euro__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>AVR Commission Euro</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVR_Commission__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>AVR Commission</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AVR_Percent__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>AVR(%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Account_Executive1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Executive 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Proposals (Account Executive1)</relationshipLabel>
        <relationshipName>Campaigns3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Executive2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Executive 3</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Proposals (Account Executive2)</relationshipLabel>
        <relationshipName>Campaigns4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Executive_1_acc__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Executive 1</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Proposals (Account Executive 1)</relationshipLabel>
        <relationshipName>Proposals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Executive_2_Acc__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Executive 2</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Proposals (Account Executive 2)</relationshipLabel>
        <relationshipName>Proposals1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Executive_3_Acc__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Executive 3</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Proposals (Account Executive 3)</relationshipLabel>
        <relationshipName>Proposals2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Executive__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account Executive 1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Proposals (Account Executive)</relationshipLabel>
        <relationshipName>Campaigns2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agency_Percent__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Agency(%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agency</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaigns (Agency)</relationshipLabel>
        <relationshipName>Campaigns1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agent_Commission_Euro__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Agency Commission Euro</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agent_Commission__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Agency Commission</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Campaigns1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Currency__c</fullName>
        <description>Select the billing currency type which would be used for billing purpose by the finance team</description>
        <label>Billing Currency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dollar</fullName>
                    <default>true</default>
                    <label>Dollar</label>
                </value>
                <value>
                    <fullName>Euro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Detail__c</fullName>
        <label>Billing Detail</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_End_Date__c</fullName>
        <label>Billing End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billing_Frequency__c</fullName>
        <label>Billing Frequency</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Option__c</fullName>
        <label>Billing Option</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Start_Date__c</fullName>
        <label>Billing Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CTR__c</fullName>
        <label>CTR</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Customer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Customer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Proposals (Client)</relationshipLabel>
        <relationshipName>Campaigns2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Consolidated_Billing__c</fullName>
        <label>Consolidated Billing</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Creative_Arrived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Creative Arrived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Creative_Due_Date__c</fullName>
        <label>Creative Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Email__c</fullName>
        <label>Customer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Digital_Media_Campaign_Account_Type__c</field>
                <operation>equals</operation>
                <value>Customer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deduct_from_Net__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deduct from Net</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discount_Method_Option_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Discount Method Option Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_Method__c</fullName>
        <label>Discount Method</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Status__c</fullName>
        <label>Discount Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Approval Pending</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                    <default>true</default>
                    <label>Not Applicable</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discount_Value_Euro__c</fullName>
        <formula>if( Gross_Media_Cost_Euro__c = NULL,(Discount__c  *  Gross_Amount_Euro__c),(Discount__c  *  Gross_Media_Cost_Euro__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount(%) Value Euro</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_Value__c</fullName>
        <formula>if( Gross_Media_Cost__c = NULL,(Discount__c*Net_Amount__c),(Discount__c*Gross_Media_Cost__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount(%) Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Discount (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Close_Date__c</fullName>
        <label>Estimated Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Field_Discount_Amount_Euro__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Proposal Discount Amount Euro</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field_Discount_Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Proposal Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Amount_Euro__c</fullName>
        <label>Gross Amount Euro</label>
        <summarizedField>Proposal_Item__c.Cost_Euro__c</summarizedField>
        <summaryForeignKey>Proposal_Item__c.Proposal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Gross_Media_Cost_Euro__c</fullName>
        <label>Gross Media Cost Euro</label>
        <summarizedField>Proposal_Item__c.Media_Cost_Euro__c</summarizedField>
        <summaryForeignKey>Proposal_Item__c.Proposal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Gross_Media_Cost__c</fullName>
        <label>Gross Media Cost</label>
        <summarizedField>Proposal_Item__c.Media_Cost__c</summarizedField>
        <summaryForeignKey>Proposal_Item__c.Proposal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>IMPs_Delivered__c</fullName>
        <label>IMPs Delivered</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IMPs_Guaranteed__c</fullName>
        <label>IMPs Guaranteed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IMPs_Percentage__c</fullName>
        <formula>IF(AND(ISBLANK(IMPs_Delivered__c ),ISBLANK(IMPs_Guaranteed__c)),0,
 IF(ISNULL(IMPs_Delivered__c),0, 
 (IMPs_Delivered__c /  IMPs_Guaranteed__c )))</formula>
        <label>IMPs%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Industry_Exclusively__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Industry Exclusively</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internal_Business__c</fullName>
        <inlineHelpText>Select the business entity that owns this campaign. This business&apos;s branding will be used on generated invoices.</inlineHelpText>
        <label>Internal Business</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inventory_Allocated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inventory Allocated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Order_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Order Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Line_level_Discount_Euro__c</fullName>
        <label>Product level Discount Euro</label>
        <summarizedField>Proposal_Item__c.Discount_Euro__c</summarizedField>
        <summaryForeignKey>Proposal_Item__c.Proposal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Line_level_Discount__c</fullName>
        <label>Product level Discount</label>
        <summarizedField>Proposal_Item__c.Discount__c</summarizedField>
        <summaryForeignKey>Proposal_Item__c.Proposal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Location_Level_Discount_Euro__c</fullName>
        <label>Location Level Discount Euro</label>
        <summarizedField>Proposal_Item__c.Location_Level_Discount_Euro__c</summarizedField>
        <summaryForeignKey>Proposal_Item__c.Proposal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Location_Level_Discount__c</fullName>
        <label>Location Level Discount</label>
        <summarizedField>Proposal_Item__c.Location_Level_Discount__c</summarizedField>
        <summaryForeignKey>Proposal_Item__c.Proposal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Migrated_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Migrated Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Month_IO_Received__c</fullName>
        <label>Month IO Received</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Monthly_Gross_Revenue__c</fullName>
        <label>Monthly Gross Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Amount_Euro__c</fullName>
        <formula>Gross_Amount_Euro__c + Total_Other_Charges_Euro__c + Other_Charges_Euro__c - Field_Discount_Amount_Euro__c - Other_Discount_Euro__c - Line_level_Discount_Euro__c - Location_Level_Discount_Euro__c - Agent_Commission_Euro__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Amount Euro</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Amount__c</fullName>
        <label>Gross Amount</label>
        <summarizedField>Proposal_Item__c.Cost__c</summarizedField>
        <summaryForeignKey>Proposal_Item__c.Proposal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Net_minus_AVR_Euro__c</fullName>
        <formula>If( Deduct_from_Net__c , Gross_Amount_Euro__c + Total_Other_Charges_Euro__c + Other_Charges_Euro__c - Field_Discount_Amount_Euro__c - Other_Discount_Euro__c - Line_level_Discount_Euro__c - Location_Level_Discount_Euro__c - Agent_Commission_Euro__c - AVR_Commission_Euro__c, Gross_Amount_Euro__c + Total_Other_Charges_Euro__c + Other_Charges_Euro__c - Field_Discount_Amount_Euro__c - Other_Discount_Euro__c - Line_level_Discount_Euro__c - Location_Level_Discount_Euro__c - Agent_Commission_Euro__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net minus AVR Euro</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_minus_AVR__c</fullName>
        <formula>If( Deduct_from_Net__c , Net_Amount__c + Total_OtherCharges__c + Other_Charges__c - Field_Discount_Amount__c - Other_Discount__c - Line_level_Discount__c - Location_Level_Discount__c - Agent_Commission__c - AVR_Commission__c, Net_Amount__c + Total_OtherCharges__c + Other_Charges__c - Field_Discount_Amount__c - Other_Discount__c - Line_level_Discount__c - Location_Level_Discount__c - Agent_Commission__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net minus AVR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Network__c</fullName>
        <label>Network</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IFE</fullName>
                </value>
                <value>
                    <fullName>Club</fullName>
                </value>
                <value>
                    <fullName>Portal</fullName>
                </value>
                <value>
                    <fullName>IFE - Int&apos;l</fullName>
                </value>
                <value>
                    <fullName>Fly-Fi</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opportunity Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Charges_Comments__c</fullName>
        <label>Other Charges Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Charges_Euro__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Other Charges Euro</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Charges__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Other Charges</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Discount_Comments__c</fullName>
        <label>Other Discount Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Discount_Euro__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Other Discount Euro</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Discount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Other Discount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Over_Under_delivery__c</fullName>
        <formula>IMPs_Delivered__c - IMPs_Guaranteed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Over/Under delivery</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ownership1__c</fullName>
        <label>Ownership 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ownership2__c</fullName>
        <label>Ownership 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ownership__c</fullName>
        <label>Ownership 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <label>PO Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Proposal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partner Proposal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account.Digital_Media_Campaign_Account_Type__c</field>
                <operation>equals</operation>
                <value>Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Campaigns3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <defaultValue>&quot;Net 30&quot;</defaultValue>
        <label>Payment Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pictures_Due_Date__c</fullName>
        <label>Pictures Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pictures_Sent_Date__c</fullName>
        <label>Pictures Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Portal__c</fullName>
        <label>Portal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IFE</fullName>
                </value>
                <value>
                    <fullName>Club</fullName>
                </value>
                <value>
                    <fullName>Portal</fullName>
                </value>
                <value>
                    <fullName>IFE - Int&apos;l</fullName>
                </value>
                <value>
                    <fullName>Fly-Fi</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prediction__c</fullName>
        <description>Predict the outcome of the proposal</description>
        <inlineHelpText>Choose possible outcome of the proposal</inlineHelpText>
        <label>Prediction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HOT</fullName>
                </value>
                <value>
                    <fullName>WARM</fullName>
                </value>
                <value>
                    <fullName>COLD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price_Tier__c</fullName>
        <label>Price Tier</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Proposal_Date__c</fullName>
        <label>Proposal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposal_Name__c</fullName>
        <label>Proposal Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposal_Submitted_Date__c</fullName>
        <label>Proposal Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Signed_Date__c</fullName>
        <label>Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Planning</fullName>
                </value>
                <value>
                    <fullName>Proposed</fullName>
                </value>
                <value>
                    <fullName>Active Negotiation</fullName>
                </value>
                <value>
                    <fullName>Signed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Contract Pending</fullName>
                    <isActive>false</isActive>
                    <label>Contract Pending</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <formula>Net_Amount__c + Total_OtherCharges__c + Other_Charges__c - Field_Discount_Amount__c - Other_Discount__c - Line_level_Discount__c - Location_Level_Discount__c - Agent_Commission__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Commission__c</fullName>
        <label>Total Commission</label>
        <summarizedField>Proposal_Item__c.CPM__c</summarizedField>
        <summaryForeignKey>Proposal_Item__c.Proposal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_OtherCharges__c</fullName>
        <label>Total Other Charges</label>
        <summarizedField>Proposal_Item__c.OtherCharges__c</summarizedField>
        <summaryForeignKey>Proposal_Item__c.Proposal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Other_Charges_Euro__c</fullName>
        <label>Total Other Charges Euro</label>
        <summarizedField>Proposal_Item__c.Other_Charges_Euro__c</summarizedField>
        <summaryForeignKey>Proposal_Item__c.Proposal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Sales_Commission_Euro__c</fullName>
        <label>Total Sales Commission Euro</label>
        <summarizedField>Proposal_Item__c.Sales_Commission_Copy_Euro__c</summarizedField>
        <summaryForeignKey>Proposal_Item__c.Proposal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Sales_Commission__c</fullName>
        <label>Total Sales Commission</label>
        <summarizedField>Proposal_Item__c.Sales_Commission_Copy__c</summarizedField>
        <summaryForeignKey>Proposal_Item__c.Proposal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Proposal</fullName>
                    <default>true</default>
                    <label>Proposal</label>
                </value>
                <value>
                    <fullName>Proposal for Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Usage_Type__c</fullName>
        <label>Usage Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Wrap_up_Deliv_Date__c</fullName>
        <label>Wrap-up Deliv. Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>of_Plays__c</fullName>
        <label># of Plays</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Proposal</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Proposal Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proposals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Billing_Contact_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Billing_Contact__c)</errorConditionFormula>
        <errorMessage>Billing Contact is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Discount_Validations</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    Discount__c &gt; 0.10, 
    $Profile.Name  = &quot;Digital Campaign Sales Representative&quot;,
    $User.Id != &quot;00540000003J5jB&quot;, /*Carol Charry*/ 
    $User.Id != &quot;00540000003amcv&quot; /*Anna Lehmann*/
)</errorConditionFormula>
        <errorDisplayField>Discount__c</errorDisplayField>
        <errorMessage>Discount value cannot be greater than 10%</errorMessage>
    </validationRules>
</CustomObject>